@@ -1,5 +1,10 @@
 2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/lib/relocator.c (malloc_in_range): Fix a memory corruption
+	when handling leftovers.
+
+2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/ieee1275/grub-ofpathname.c (main): Handle --help and --version
 	so that help2man doesn't fail.
 
